Fix up some issues

--- a/src/content/docs/about/socials.mdx
+++ b/src/content/docs/about/socials.mdx
@@ -1,15 +1,18 @@
 ---
 title: Socials
 description: A quick list of my socials
+prev: false
 ---
+
+A quick list of my socials
 
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
-	<LinkCard title="Discord" icon="information" href="https://www.excalian.com/discord" />
-    <LinkCard title="Youtube" icon="information" href="https://www.excalian.com/youtube" />
-    <LinkCard title="Github" icon="information" href="https://www.excalian.com/github" />
-    <LinkCard title="Twitter" icon="information" href="https://www.excalian.com/twitter" />
-    <LinkCard title="Twitch" icon="information" href="https://www.excalian.com/twitch" />
-    <LinkCard title="Threads" icon="information" href="https://www.excalian.com/threads" />
+	<LinkCard title="Discord" href="https://www.excalian.com/discord" />
+    <LinkCard title="Youtube" href="https://www.excalian.com/youtube" />
+    <LinkCard title="Github" href="https://www.excalian.com/github" />
+    <LinkCard title="Twitter" href="https://www.excalian.com/twitter" />
+    <LinkCard title="Twitch" href="https://www.excalian.com/twitch" />
+    <LinkCard title="Threads" href="https://www.excalian.com/threads" />
 </CardGrid>
