--- a/src/content/docs/start-here.mdx
+++ b/src/content/docs/start-here.mdx
@@ -1,7 +1,11 @@
 ---
 title: Start Here
 description: A basic 'start here' page for my website
+prev: false
+next: false
 ---
+
+A basic 'start here' page for my website
 
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
