Update the whole website

--- a/src/content/docs/about/socials.mdx
+++ b/src/content/docs/about/socials.mdx
@@ -8,7 +8,7 @@ A quick list of my socials
 
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-<CardGrid stagger>
+<CardGrid>
 	<LinkCard title="Discord" href="https://www.excalian.com/discord" />
     <LinkCard title="Youtube" href="https://www.excalian.com/youtube" />
     <LinkCard title="Github" href="https://www.excalian.com/github" />
