--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,14 +1,14 @@
 ---
-title: Welcome to my (Excalian's) Website
+title: Welcome to Excalian
 description: The homepage of my website
 template: splash
 hero:
-  tagline: The homepage of my website (at www.excalian.com)
+  tagline: The homepage of my website
   image:
     file: ../../../public/large_logo.png
   actions:
     - text: Look Around
-      link: /start-here
+      link: /about/socials
       icon: right-arrow
       variant: primary
     - text: View Blog
