Change a bunch of things

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: The homepage of my website
   image:
-    file: ../../../public/large_logo.png
+    file: ../../assets/large_logo.png
   actions:
     - text: Look Around
       link: /about/socials
