--- a/src/content/docs/about/education.mdx
+++ b/src/content/docs/about/education.mdx
@@ -1,6 +1,8 @@
 ---
 title: 'My Education'
 description: 'A catalogue of my education over the years'
+prev: false
+next: true
 ---
 
 import { Aside, Steps, Tabs, TabItem } from '@astrojs/starlight/components';
