--- a/src/content/docs/about/work.mdx
+++ b/src/content/docs/about/work.mdx
@@ -1,6 +1,8 @@
 ---
 title: 'My Work'
 description: 'A catalogue of my work experience over the years'
+prev: true
+next: false
 ---
 
 import { Aside, Steps, Card } from '@astrojs/starlight/components';
