--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/large_logo.png
   actions:
     - text: Look Around
-      link: /about/socials
+      link: /socials
       icon: right-arrow
       variant: primary
     - text: View Blog
