--- a/src/content/docs/socials.mdx
+++ b/src/content/docs/socials.mdx
@@ -1,7 +1,8 @@
 ---
 title: Socials
 description: A quick list of my socials
-prev: false
+prev: true
+next: false
 ---
 
 A quick list of my socials
